<resources>
    <string name="app_name">موکل</string>

    <!-- Strings related to login -->
    <string name="prompt_email">ایمیل</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="signin_or_signup">ورود/ثبت نام</string>
    <string name="next">بعدی</string>
    <string name="finish">تمام</string>
    <string name="start">شروع کن</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="app_rules_title">قوانین نرم افزار</string>
    <string name="agree">موافقم</string>
    <string name="disagree">مخالفم</string>
    <string name="enter_phone_num">شماره همراه خود را وارد نمایید</string>
    <string name="phone_num">شماره همراه</string>
    <string name="get_code">دریافت کد</string>
    <string name="reg_code_sent">کد فعالسازی به شماره همراه شما ارسال شد</string>
    <string name="edit_num">ویرایش شماره</string>
    <string name="phone_num_err">شماره وارد شده صحیح نمیباشد</string>
    <string name="elapsed_time">زمان باقی مانده</string>
    <string name="resend_reg_code">دریافت مجدد کد فعالسازی</string>

    <string name="name">نام</string>
    <string name="family_name">نام خانوادگی</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">خانه</string>
    <string name="add_file">ایجاد پرونده</string>
    <string name="view_file">مشاهده پرونده</string>
    <string name="wallet">کیف پول</string>
    <string name="favorite_lawyers">مشاورین محبوب</string>
    <string name="notifs">پیام‌ها</string>
    <string name="score">امتیاز</string>

    <string name="call_report">گزارش تماس</string>
    <string name="account_report">گزارش حساب</string>
    <string name="increase_credit">افزایش اعتبار</string>
    <string name="invite">دعوت از دوستان</string>
    <string name="discount_code">کد تخفیف</string>
    <string name="register_discount_code">ثبت کد تخفیف</string>
    <string name="help_usage">راهنمای استفاده</string>
    <string name="about_us">درباره ما</string>
    <string name="exit">خروج از نرم‌افزار</string>

    <string name="username">نام کاربری</string>
    <string name="finish_submit">نهایی نمودن ثبت نام</string>


    <string name="help_item_title_3">انتخاب مشاور</string>
    <string name="help_item_title_1">ایجاد پرونده</string>
    <string name="help_item_title_2">درخواست مشاوره آنلاین</string>
    <string name="help_item_desc_1">به قسمت ایجاد پرونده برو و پرونده خودت رو
تشکیل بده؛ میتونید علاوه بر عنوان و توضیحات
مستندات مد نظرت رو هم به پرونده اضافه کنی</string>
    <string name="help_item_desc_2">اگر خواستی پروندت رو تکمیل کن
وگرنه درخواست مشاوره روی پرونده ای که ساختی بده</string>
    <string name="help_item_desc_3">از بین مشاوران آنلاین که پروند رو قبول کردن یکی
انتخاب کن و منتظر تماس باش</string>

    <string name="title_activity_create_file">ایجاد پرونده</string>

    <string name="file_title">عنوان پرونده</string>
    <string name="file_number">شماره پرونده</string>
    <string name="file_desc">توضیحات پرونده</string>
    <string name="continu">ادامه</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_credit">CreditActivity</string>
    <string name="connection_error">خطا در برقراری ارتباط با سرور</string>


    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="set_profile_photo">انتخاب تصویر پروفایل</string>
    <string name="take_camera_picture">دوربین</string>
    <string name="choose_from_gallery">گالری</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <string name="accept">تایید</string>
    <string name="cancel">انصراف</string>
    <string name="phone_consultant">درخواست مشاوره تلفنی</string>
    <string name="recent_consultant"> درخواست از مشاورین قبلی </string>
    <string name="faivorites_consultant">درخواست از مشاورین محبوب</string>
    <string name="share">اشتراک گذاری</string>
    <string name="share_using">اشتراک گذاری با</string>
    <string name="consulting">درخواست مشاوره حضوری</string>
    <string name="select_adviser_types">حوزه مشاور را انتخاب نمایید</string>

    <string name="adviser_req_wait_text">مشاورین باید پرونده شما را بررسی نمایند
.این امر به مقداری زمان نیاز دارد
از صبر و شکیبایی شما کمال سپاسگزاری را داریم</string>
    <string name="cancel_request">لغو درخواست</string>
    <string name="choose_adviser">انتخاب مشاور</string>
    <string name="connect">ارتباط</string>
    <string name="select">انتخاب</string>
    <string name="deselect">عدم انتخاب</string>
    <string name="credit_cash">مبلغ افزایش اعتبار</string>
    <string name="rials">ریال</string>
    <string name="connect_to_bank_and_pay">اتصال به بانک و پرداخت آنلاین</string>
    <string name="available_credit">اعتبار موجود</string>
    <string name="finacial_report">گزارش حساب</string>
    <string name="operation_type">نوع عملیات</string>
    <string name="decrease_credit">کاهش اعتبار</string>
    <string name="price">مبلغ</string>
    <string name="desc">شرح</string>
    <string name="factor">فاکتور</string>
    <string name="transaction_num">شماره تراکنش</string>
    <string name="totlal_calls">دقایق تماس</string>
    <string name="request_count">تعداد درخواست‌ها</string>
    <string name="file">پرونده</string>
    <string name="lawyer">مشاور</string>
    <string name="minute">دقیقه</string>
    <string name="title_activity_file_preview">FilePreviewActivity</string>

    <string name="preiview_file">مشاهده پرونده</string>

    <string name="discription">توضیحات</string>
    <string name="docs">مستندات</string>
    <string name="lawyer_docs">مستندات مشاور</string>
    <string name="lawyer_comment">نظر مشاور</string>

    <string name="sample_comment">
        مشاور حقوقی با دانشی که به قوانین و اصول حقوقی دارد می تواند کمک شایانی به سازمان ها، ادارات و شرکت های خصوصی داشته باشد. مدیران و کسانی که صاحب نفع در آن سازمان می باشند
    </string>

    <string name="enter">وارد نمایید ...</string>
    <string name="req_from_favorites_advisers">درخواست از مشاورین محبوب</string>
    <string name="req_from_previous_advisers">درخواست از مشاورین قبلی</string>
    <string name="send_request">ارسال درخواست</string>
    <string name="send_feedback">ثبت و ارسال نظر</string>
    <string name="your_feedback_to_lawyer_score">امتیاز شما به این مشاور</string>
    <string name="send_us_your_commnet">در صورت تمایل نظر خود را یادداشت و برای ما ارسال نمایید</string>
    <string name="adviser_type">نوع مشاور</string>
    <string name="level">سطح</string>

    <string name="price_per_minute">هر دقیقه مشاوره</string>
    <string name="about_lawyer">درباره مشاور</string>
    <string name="comments">نظرات</string>
    <string name="response">پاسخ‌ها</string>

</resources>
