<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/call_report"
            android:title="@string/call_report" />

        <item
            android:id="@+id/account_report"
            android:title="@string/account_report" />

    </group>


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_credit"
            android:title="@string/increase_credit" />

        <item
            android:id="@+id/invite"
            android:title="@string/invite" />

        <item
            android:id="@+id/discount_code"
            android:title="@string/discount_code" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/help_usage"
            android:title="@string/help_usage" />

        <item
            android:id="@+id/about_us"
            android:title="@string/about_us" />

        <item
            android:id="@+id/exit"
            android:title="@string/exit" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
