<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_view_files"
        android:icon="@drawable/view_file"
        android:title="@string/view_file" />

    <item
        android:id="@+id/navigation_add_file"
        android:icon="@drawable/addfile_btn"
        android:title="@string/add_file" />

    <item
        android:id="@+id/navigation_favorite_lawyers"
        android:icon="@drawable/bookmark"
        android:title="@string/favorite_lawyers" />

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/wallet"
        android:title="@string/wallet" />

</menu>