<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginForm2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone">

    <TextView
        android:id="@+id/regCodeSentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_code_sent" />

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editPhoneNumBtn"
            android:text="@string/edit_num"
            android:onClick="editNumOnClick"/>

        <TextView
            android:id="@+id/showPhoneNumTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />

    </LinearLayout>


    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/regCodeTv"
        android:text="___________"/>

    

    <Button
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend_reg_code"
        android:id="@+id/resendRegCodeBtn"
        android:onClick="resendCodeOnClick"/>


</LinearLayout>
