<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.IncreaseCreditActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/increaseCreditToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/credit_cash"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/increaseCreditEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/edittext_shape"
            android:inputType="number"
            android:minHeight="50dp"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:padding="10dp"
            android:gravity="center"
            android:hint="@string/rials"/>
        
        <Button
            android:layout_marginTop="20dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textColor="@color/white_two"
            android:background="@color/turquoise_green"
            android:minHeight="50dp"
            android:text="@string/connect_to_bank_and_pay"
            android:onClick="connectAndPayOnClick"/>

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:textColor="@color/warm_grey_two"
            android:background="@android:color/transparent"
            android:minHeight="50dp"
            android:text="@string/cancel"
            android:onClick="cancelOnClick"/>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>