<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginForm1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/enterPhoneNumTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/enter_phone_num" />

    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/phoneNumEt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="9126664106"
            android:hint="@string/phone_num"
            android:background="@drawable/edittext_shape"
            android:minHeight="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:inputType="phone" />

        <EditText
            android:singleLine="true"
            android:background="@drawable/edittext_shape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:editable="false"
            android:gravity="center"
            android:layout_weight="1"
            android:paddingLeft="7dp"
            android:paddingRight="7dp"
            android:text="+98 " />


    </LinearLayout>

    <Button
        android:id="@+id/getRegCodeBtn"
        android:layout_width="120dp"
        android:layout_marginTop="20dp"
        android:layout_height="35dp"
        android:textColor="@color/white"
        android:background="@color/turquoise_green"
        android:onClick="getRegCodeOnClick"
        android:text="@string/get_code" />


</LinearLayout>
