<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/metro_background"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/dateAndTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/mid_blue">

            <TextView
                android:id="@+id/dateAndTimeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:text="پنجشنبه 25 مهر 98 | 02:00"
                android:textColor="@color/white_two"
                android:textSize="13sp" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="10dp"
            android:text="@string/file"
            android:textColor="@color/warm_grey_two"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/fileNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="مشکل با کارفرما و عدم پرداخت و ثبت بیمه"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:padding="10dp"
            android:text="@string/lawyer"
            android:textColor="@color/warm_grey_two"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/lawyerNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="محمدرضا راد"
            android:textColor="@color/reddish"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:id="@+id/totalTimeTv"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/minute"
                    android:textColor="@color/warm_grey_two"
                    android:textSize="16sp" />


            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/white" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center">


                <TextView
                    android:id="@+id/priceTv"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rials"
                    android:textColor="@color/warm_grey_two"
                    android:textSize="16sp" />


            </RelativeLayout>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>